# ehwe_workbench

./: .device  .env  .gitignore  CMakeLists.txt  README.md  adxl345_spi.c  adxl345_spi.h  config.txt  econfig.h.in  embedded_config.h.in  fg_bq27441.c  fg_bq27441_device.h  i2c_magnetometer.c  i2c_magnetometer_native.c  i2c_magnetometer_stm32.c  main.c  max30105.c  max30105_device.h  pm_ina233.c  pm_ina233_device.h  pwm_pca9685.c  pwm_pca9685.h  pwm_pca9685_device.c  pwm_pca9685_device.h  pwm_pca9685_regdefs.h  pwm_pca9685_regrw.c  pwm_pca9685_regrw.h  spiram.c  spiram.h
doc/: README.md
include/: fg_bq27441.h  oximeter.h  pm_ina233.h  pwm_pca9685.h
